--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,23 @@
 // Mixins Here
+.button(@bg-color, @width, @font-color){
+    display:block;
+    background-color:@bg-color;
+    margin: 0 2% 4%;
+    cursor:pointer;
+    width:@width;
+    height:45px;
+    font-size:2rem;
+    border-radius: 10px;
+    color:@font-color;
+}
+
+.flexbox{
+    display:flex;
+
+}
+
+.center{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
