--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,40 @@
 // Navigation code here
+.nav-bar{
+    width:100%;
+    .nav-container{
+        display:flex;
+        justify-content: space-between;
+        flex-direction: column;
+        margin-top: 20px;
+        h2{
+            vertical-align: middle;
+            width:100%;
+            font-size: 3.5rem;
+            align-items: center;
+            text-align:center;
+            margin-bottom:1%;
+        }
+        nav{
+            display:flex;
+            align-items: center;
+            justify-content: space-evenly;
+            width:100%;
+            padding: 2% 20%;
+            a{
+                text-decoration:none;
+                color:black;
+                font-size:1.5rem;
+            }
+        }
+    }
+
+    @media @phone{
+        .nav-container{
+            nav{
+                padding:2% 10%;
+                height:100%;
+                flex-wrap:wrap;
+            }
+        }
+    }
+}
